--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.90.2",
     "@types/lodash": "^4.17.20",
     "@uiw/react-md-editor": "^4.0.8",
+    "@wagmi/connectors": "^6.1.3",
     "@wagmi/core": "^2.22.0",
     "@walletconnect/ethereum-provider": "^2.22.4",
     "@walletconnect/types": "^2.22.4",
