--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
+    "vite": "7.1.11",
     "vite-plugin-svgr": "^4.5.0"
   },
   "scripts": {
