--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@walletconnect/universal-provider": "^2.22.4",
     "antd": "^5.23.0",
     "dayjs": "^1.11.18",
+    "echarts": "^6.0.0",
     "jotai": "^2.14.0",
     "lodash": "^4.17.21",
     "query-string": "^9.3.0",
